# phone-validation

./: Cargo.toml
src/: lib.rs  main.rs  offline_validation.rs  online_validation.rs
