[package]
name = "phone-validation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phonenumber = "0.3.1"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
reqwest = "0.11.6"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.59"
urlencoding = "2.1.0"
ctrlc = "3.2.1"
